Change window decoration for kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,11 +6,10 @@ font_size 16.0
 cursor_shape beam
 
 # Window behavior
-hide_window_decorations no
+hide_window_decorations yes
 wayland_titlebar_color #171617
 enabled_layouts *
 remember_window_size no
-startup_mode windowed
 initial_window_width  80c
 initial_window_height 20c
 
